# ipoc-rust

./: Cargo.toml
src/: aws.rs  configuration.rs  constants.rs  lib.rs  main.rs  processor.rs  uploader.rs
src/routes/: compressor.rs  mod.rs  upload.rs
