[package]
name = "ipoc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
cpu-time = "1.0.0"
envy = "0.4.2"
fast_image_resize = "3.0.4"
image_compressor = "1.5.0"
turbojpeg = { version = "1.1.0", features = ["image"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
actix-multipart = "0.6.1"
image = "0.23.14"
rayon = "1.5.1"
futures-util = "0.3.30"
