[package]
name = "ipoc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
cpu-time = "1.0.0"
envy = "0.4.2"
image_compressor = "1.5.0"
turbojpeg = { version = "1.1.0", features = ["image"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
actix-multipart = "0.6.1"
image = "0.25.1"
rayon = "1.5.1"
futures-util = "0.3.30"
fast_image_resize = { version = "4.0.0", features = ["image"] }

