[package]
name = "ipoc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
cpu-time = "1.0.0"
envy = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
actix-multipart = "0.6.1"
image = "0.25.1"
futures-util = "0.3.30"
fast_image_resize = { version = "4.0.0", features = ["image"] }
aws-config = "1.5.0"
aws-sdk-s3 = "1.32.0"
log = "0.4.21"
trait-variant = "0.1.2"
env_logger = "0.11.3"
anyhow = "1.0.86"
thiserror = "1.0.61"
